#1446 fix volumes align

--- a/src/app/modules/scalper-order-book/components/scalper-order-book-table/scalper-order-book-table.component.less
+++ b/src/app/modules/scalper-order-book/components/scalper-order-book-table/scalper-order-book-table.component.less
@@ -102,7 +102,7 @@
 
   #volume-panel {
     .table-cell {
-      text-align: right;
+      padding-left: 3px;
       position: relative;
 
       .highlighter {
